# ccmm-invenio

./: .env-services  .gitignore  .ruff.toml  MANIFEST.in  README.md  oarepo.yaml  package.json  pyproject.toml  run-tests.sh  setup.cfg
ccmm_invenio/: __init__.py
ccmm_versions/: README.md  pyproject.toml
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-03/: README.md  RELEASE_NOTES.md
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-03/cs/: dsv.ttl  index.html
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-03/en/: index.html
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-25/: README.md
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-25/address/: schema.xsd
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-25/agent/: schema.xsd
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-25/alternate-title-type/: schema.xsd
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-25/checksum/: schema.xsd
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-10-25/checksum-algorithm/: schema.xsd
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2025-11-02/: RELEASE_NOTES.md  ccmm_sample.xml
ccmm_versions/ccmm-xml-releases/ccmm-1.1.0-2026-01-29/: RELEASE_NOTES.md
ccmm_versions/diffs/: 1.0.1--1.1.0-2025-10-03.xml  1.1.0-2025-10-03--1.1.0-2025-10-25.xml  1.1.0-2025-10-25--1.1.0-2025-11-01.xml  1.1.0-2025-10-25--1.1.0-2025-11-02.xml  1.1.0-2025-11-02--1.1.0-2025-11-03.xml  1.1.0-2025-11-03--1.1.0-2026-01-29.xml
ccmm_versions/scripts/: add_ccmm.sh
ccmm_versions/src/ccmm_versions/: __init__.py  clean_all.py  create_schema_overview.py  diff_ccmm.py  get_previous_version.py  identify_anonymous_types.py  merge_schemas.py
ccmm_versions/summaries/: ccmm-1.1.0-2025-10-25.summary.md  ccmm-1.1.0-2025-11-01.summary.md  ccmm-1.1.0-2025-11-02.summary.md  ccmm-1.1.0-2025-11-03.summary.md  ccmm-1.1.0-2026-01-29.summary.md
tests/: model.py  (+5 more)
(+171 files in other folders)
