[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccmm-invenio"
version = "1.1.1"
description = "CCMM (Czech Core Metadata Model) components for NRP Invenio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
    "oarepo-model>=1.0.0,<2.0.0",
    "oarepo-rdm>=2.0.0,<3.0.0",
    "langdetect>=1.0.9",

    # invenio dependencies
    "invenio-rdm-records>=27.0.0,<28.0.0",
]

[project.urls]
Homepage = "https://github.com/NRP-CZ/ccmm-invenio"

[project.optional-dependencies]
compile-vocabularies = [
    "click",
    "pyyaml",
    "rdflib",
    "tenacity",
    "tqdm",
]

oarepo14= [
    "oarepo>=14.0.0,<15.0.0",
]

tests = [
    "pytest-invenio>=4.0.0,<5.0.0",
]

[project.entry-points."invenio_rdm_records.fixtures"]
ccmm_invenio = "ccmm_invenio.fixtures"

[project.entry-points."invenio_assets.webpack"]
ccmm_invenio_ui = "ccmm_invenio.ui.webpack:theme"
ccmm_invenio_i18n = "ccmm_invenio.i18n.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
ccmm_invenio_messages = "ccmm_invenio.i18n"

[tool.hatch.build.targets.sdist]
include = [
    "/src/ccmm_invenio",
]
