[project]
name = "ccmm-versions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "lxml>=6.0.0",
    "xmldiff>=2.7.0",
    "semver"
]

[project.urls]
Homepage = "https://github.com/NRP-CZ/ccmm-invenio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
packages = ["src/ccmm_versions"]

[tool.hatch.build.targets.wheel]
packages = ["src/ccmm_versions"]
